Added the ability to upload content through the REST server
